# rat

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cg.cf2  cg.deep  cg.w2  ppdeep_small.c  shell.nix
.github/workflows/: openssf.yml  test_ubuntu_latest.yml  test_windows_latest.yml
bench/: bench.c  compare.sh
cc/: EmitConst.cpp  Lexer.h  Makefile  Parser.h  Preprocess.cpp  Runner.cpp  main.cpp
cc/include/: Ast.h  CharClass.h  Compile.h  Emit.h  Host.h  Lexer.h  Parser.h  ParserDetail.h  PreprocessDetail.h  TargetLayout.h
cc/lib/: Ast.cpp  Compile.cpp  Emit.cpp  EmitBinary.cpp  EmitCall.cpp  EmitComplex.cpp  EmitConst.cpp  EmitDecl.cpp  EmitExpr.cpp  EmitGlobal.cpp  EmitInit.cpp  EmitInitFlat.cpp  EmitScan.cpp  EmitStmt.cpp  EmitType.cpp  Host.cpp  Lexer.cpp  ParseDeclarator.cpp  ParseExpr.cpp  ParseInit.cpp  ParseLiteral.cpp  ParsePrimary.cpp  ParseStmt.cpp  ParseStruct.cpp  ParseType.cpp  Parser.cpp  PpLex.cpp  PpMacro.cpp  Predefs.cpp  Preprocess.cpp  PreprocessEval.cpp
cc/test/: Runner.cpp  array_2d_init.c  array_init_string_sized.c  char_arith.c  enum_basic.c  enum_switch.c  global_array_zero.c  global_compound.c  global_long_neg.c  hex_float.c  long_mul.c  pp_conditional.c  ptr_deref.c  relational.c  shift.c  sib_index_int.c  sizeof_case.c  sizeof_expr.c  sizeof_types.c  static_file_scope.c  static_local_array.c  string_intern.c  struct_align.c  struct_basic.c  struct_copy.c  struct_nested.c  switch_default.c  ternary.c  typedef_basic.c  unary.c  while_sum.c
include/: Core.h  rat.h
include/CodeGen/: LIR.h  MachineFunction.h  RegAlloc.h  Schedule.h  Target.h
include/IR/: Function.h  Module.h  Node.h  Opcode.h  Printer.h  TextParser.h  Type.h
include/Pass/: Pass.h  PassManager.h  PassRegistry.h  PrintPass.h  Verify.h
include/Support/: Pass.h  PassRegistry.h  StringUtil.h
lib/CodeGen/: LIR.cpp  LinearScanRegAlloc.cpp  RegAlloc.cpp  Schedule.cpp
lib/IR/: Function.cpp  Module.cpp  Node.cpp  Opcode.cpp  Printer.cpp  TextParser.cpp  Type.cpp
lib/Pass/: Pass.cpp  PassManager.cpp  PassRegistry.cpp  PrintPass.cpp  Verify.cpp
lib/Support/: PassManager.cpp  PassRegistry.cpp
rat/: Makefile  README.md
rat/docs/: codegen.md  emit.md  ir.md  passes.md  testing.md
rat/include/: Core.h  rat.h
rat/test/: Makefile  Runner.cpp  cfg_branch_false.rat  cfg_branch_true.rat  driver.cpp  fold_identity.rat  fold_mul_one.rat  fold_mul_zero.rat  fold_reassoc_add.rat  fold_sub_self.rat  fold_xor_self.rat  inline_recursive_skip.rat  mem_alloc_noalias.rat  mem_load_cse.rat
test/cases/: cfg_const_branch.rat  fold_cmp_const.rat  fold_const.rat  fold_convert_const.rat  fold_div_const.rat  fold_neg_const.rat  fold_not_const.rat  fold_shift_collapse.rat  fold_strength_mul_pow2.rat  fold_strength_urem_pow2.rat  gvn_cse.rat  gvn_redundant_expr.rat  inline_basic.rat  mem_alias_skip.rat  pipeline_loop.rat  roundtrip_globals.rat  roundtrip_loop.rat  sccp_loop_const.rat  sccp_phi_branch.rat
test/cc/: Ast.cpp  Ast.h  CharClass.h  Emit.cpp  Emit.h  EmitComplex.cpp  EmitConst.cpp  Lexer.cpp  (+40 more)
(+1988 files in other folders)
